# charm-kubernetes-worker

./: .charmcraft-channel  .gitignore  .jujuignore  CONTRIBUTING.md  Makefile  README.md  actions.yaml  build-cni-resources.sh  charmcraft.yaml  config.yaml  layer.yaml  lxd-profile.yaml  metadata.yaml  pyproject.toml  registry-configmap.yaml  requirements.txt  tox.ini
.github/workflows/: build.yml  main.yml  naming-lint-unit.yaml  vsphere-integration.yaml
actions/: microbot  pause  registry  resume
reactive/: kubernetes_worker.py
script/: upload
scripts/: update_alert_rules.py
scripts/rules-patches/: core-alert-rules.patch
src/: actions.yaml  charm.py  cloud_integration.py  cos_integration.py  http_provides.py  kubectl.py  metadata.yaml
src/actions/: cis_benchmark.py  upgrade.py
src/prometheus_alert_rules/: kubernetesControlPlane-prometheusRule.yaml
src/reactive/: kubernetes_worker.py
src/templates/: ingress-daemon-set.yaml  nagios_plugin.py
templates/: default-http-backend.yaml  ingress-daemon-set.yaml  ingress-deployment.yaml  microbot-example.yaml  nagios_plugin.py  nfs-provisioner.yaml  registry.yaml
tests/: conftest.py  test_kubernetes_worker.py  test_reactive_kubernetes_worker.py  validate-wheelhouse.sh
tests/data/: bundle.yaml  charm.yaml  overlay.yaml
tests/data/test_deprecated_extra_args/: kube-proxy_h  kubelet_h
tests/integration/: test_charm.py  test_k8s_worker_charm.py  test_kubernetes_worker_integration.py
tests/unit/: conftest.py  test_actions.py  test_charm.py  test_kubernetes_worker.py
